--- a/tinkoff-id/src/main/res/drawable/tinkoff_id_cashback_background_black_style.xml
+++ b/tinkoff-id/src/main/res/drawable/tinkoff_id_cashback_background_black_style.xml
@@ -15,19 +15,11 @@
   ~ limitations under the License.
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
-
-    <declare-styleable name="TinkoffIdSignInButton" tools:ignore="ResourceName">
-        <attr name="tinkoff_id_size" format="enum">
-            <enum name="standard" value="0" />
-            <enum name="compact" value="1" />
-        </attr>
-        <attr name="tinkoff_id_style" format="enum">
-            <enum name="yellow" value="0" />
-            <enum name="gray" value="1" />
-            <enum name="black" value="2" />
-        </attr>
-        <attr name="tinkoff_id_cashback" format="string"/>
-        <attr name="tinkoff_id_text" format="string"/>
-    </declare-styleable>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/tinkoff_id_cashback_black_style"/>
+    <corners android:radius="@dimen/tinkoff_id_cashback_corner_radius"/>
+    <padding android:bottom="@dimen/tinkoff_id_vertical_cashback_padding"/>
+    <padding android:top="@dimen/tinkoff_id_vertical_cashback_padding"/>
+    <padding android:left="@dimen/tinkoff_id_horizontal_cashback_padding"/>
+    <padding android:right="@dimen/tinkoff_id_horizontal_cashback_padding"/>
+</shape>
