--- a/app-demo/src/main/res/layout/activity_partner.xml
+++ b/app-demo/src/main/res/layout/activity_partner.xml
@@ -10,10 +10,10 @@
         android:id="@+id/clientIdInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/partner_auth_client_id"
-        android:layout_marginTop="4dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
+        android:hint="@string/partner_auth_client_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -28,10 +28,10 @@
         android:id="@+id/redirectUriInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/partner_auth_redirect_url"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:hint="@string/partner_auth_redirect_url"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/clientIdInputLayout">
@@ -49,14 +49,14 @@
         android:text="@string/partner_auth_reset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/redirectUriInputLayout"/>
+        app:layout_constraintTop_toBottomOf="@id/redirectUriInputLayout" />
 
     <TextView
         android:id="@+id/compactButtonLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/partner_auth_compact"
         android:layout_marginTop="16dp"
+        android:text="@string/partner_auth_compact"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reset" />
@@ -64,13 +64,13 @@
     <ru.tinkoff.core.tinkoffId.ui.TinkoffIdSignInButton
         android:id="@+id/compactButtonTinkoffAuth"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_margin="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/compactButtonLabel"
-        app:tinkoff_id_style="black"
-        app:tinkoff_id_size="compact" />
+        app:tinkoff_id_compact="true"
+        app:tinkoff_id_style="black" />
 
     <TextView
         android:id="@+id/standardButtonLabel"
@@ -85,16 +85,18 @@
     <ru.tinkoff.core.tinkoffId.ui.TinkoffIdSignInButton
         android:id="@+id/standardButtonTinkoffAuth"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_margin="8dp"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/standardButtonLabel"
-        app:tinkoff_id_size="standard"
+        app:tinkoff_id_badge="@string/partner_auth_sign_in_button_badge"
+        app:tinkoff_id_compact="false"
+        app:tinkoff_id_corner_radius="@dimen/tinkoff_id_default_corner_radius"
         app:tinkoff_id_style="yellow"
-        app:tinkoff_id_text="@string/partner_auth_sign_in_button_text"
-        app:tinkoff_id_cashback="@string/partner_auth_sign_in_button_cashback"/>
+        app:tinkoff_id_title="@string/partner_auth_sign_in_button_title"
+        app:tinkoff_id_font="@font/neue_haas_unica_w1g"/>
 
     <Button
         android:id="@+id/buttonUpdateToken"
