--- a/tinkoff-id/src/main/res/drawable/tinkoff_id_background_yellow_style.xml
+++ b/tinkoff-id/src/main/res/drawable/tinkoff_id_background_yellow_style.xml
@@ -16,17 +16,12 @@
   -->
 
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/tinkoff_id_button_pressed_black_style">
+    android:color="@color/tinkoff_id_button_pressed_yellow_style">
     <item>
         <selector>
-            <item android:state_enabled="false">
-                <shape android:shape="oval">
-                    <solid android:color="@color/tinkoff_id_button_disabled_black_style" />
-                </shape>
-            </item>
             <item>
-                <shape android:shape="oval">
-                    <solid android:color="@color/tinkoff_id_button_black_style" />
+                <shape android:shape="rectangle">
+                    <solid android:color="@color/tinkoff_id_button_yellow_style" />
                 </shape>
             </item>
         </selector>
