--- a/tinkoff-id/src/main/res/drawable/tinkoff_id_compact_background_yellow_style.xml
+++ b/tinkoff-id/src/main/res/drawable/tinkoff_id_compact_background_yellow_style.xml
@@ -19,16 +19,9 @@
     android:color="@color/tinkoff_id_button_pressed_yellow_style">
     <item>
         <selector>
-            <item android:state_enabled="false">
-                <shape android:shape="rectangle">
-                    <solid android:color="@color/tinkoff_id_button_disabled_yellow_style" />
-                    <corners android:radius="@dimen/tinkoff_id_sign_in_button_corner_radius" />
-                </shape>
-            </item>
             <item>
-                <shape android:shape="rectangle">
+                <shape android:shape="oval">
                     <solid android:color="@color/tinkoff_id_button_yellow_style" />
-                    <corners android:radius="@dimen/tinkoff_id_sign_in_button_corner_radius" />
                 </shape>
             </item>
         </selector>
