--- a/tinkoff-id/src/main/res/values/attr.xml
+++ b/tinkoff-id/src/main/res/values/attr.xml
@@ -18,16 +18,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <declare-styleable name="TinkoffIdSignInButton" tools:ignore="ResourceName">
-        <attr name="tinkoff_id_size" format="enum">
-            <enum name="standard" value="0" />
-            <enum name="compact" value="1" />
-        </attr>
+        <attr name="tinkoff_id_compact" format="boolean"/>
         <attr name="tinkoff_id_style" format="enum">
             <enum name="yellow" value="0" />
             <enum name="gray" value="1" />
             <enum name="black" value="2" />
         </attr>
-        <attr name="tinkoff_id_cashback" format="string"/>
-        <attr name="tinkoff_id_text" format="string"/>
+        <attr name="tinkoff_id_badge" format="string"/>
+        <attr name="tinkoff_id_title" format="string"/>
+        <attr name="tinkoff_id_corner_radius" format="dimension"/>
+        <attr name="tinkoff_id_font" format="reference"/>
     </declare-styleable>
 </resources>
