--- a/tinkoff-id/src/main/res/menu/tinkoff_id_web_view_auth_menu.xml
+++ b/tinkoff-id/src/main/res/menu/tinkoff_id_web_view_auth_menu.xml
@@ -15,10 +15,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <string name="tinkoff_id_tinkoff_text">Tinkoff</string>
-    <string name="tinkoff_id_reload_menu_item_text">Перезагрузить</string>
-    <string name="tinkoff_id_close_button_text">Закрыть</string>
-
-</resources>
+    <item
+        android:id="@+id/reloadMenuItem"
+        android:icon="@drawable/tinkoff_id_reload_icon"
+        android:title="@string/tinkoff_id_reload_menu_item_text"
+        app:showAsAction="ifRoom" />
+</menu>
