--- a/tinkoff-id/src/main/res/values/styles.xml
+++ b/tinkoff-id/src/main/res/values/styles.xml
@@ -17,8 +17,9 @@
 
 <resources>
 
-    <string name="tinkoff_id_tinkoff_text">Tinkoff</string>
-    <string name="tinkoff_id_reload_menu_item_text">Перезагрузить</string>
-    <string name="tinkoff_id_close_button_text">Закрыть</string>
+    <style name="TinkoffIdAuth.Theme" parent="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <item name="tinkoff_id_action_color">@color/tinkoff_id_action_color</item>
+        <item name="android:windowBackground">@color/tinkoff_id_window_background</item>
+    </style>
 
 </resources>
