--- a/app-demo/src/main/res/xml/network_security_config.xml
+++ b/app-demo/src/main/res/xml/network_security_config.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
+    <base-config>
+        <trust-anchors>
+            <certificates src="system" />
+            <certificates src="@raw/tinkoff_root_cert" />
+            <certificates src="@raw/ministry_of_digital_development_root_cert" />
+        </trust-anchors>ne
+    </base-config>
     <debug-overrides>
         <trust-anchors>
             <!-- Trust user added CAs while debuggable only -->
