--- a/app-demo/src/main/res/xml/network_security_config.xml
+++ b/app-demo/src/main/res/xml/network_security_config.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<network-security-config>
+<network-security-config xmlns:tools="http://schemas.android.com/tools">
     <base-config>
         <trust-anchors>
             <certificates src="system" />
-            <certificates src="@raw/tinkoff_root_cert" />
-            <certificates src="@raw/ministry_of_digital_development_root_cert" />
+            <certificates src="@raw/tinkoff_root_cert"
+                tools:ignore="NetworkSecurityConfig" />
+            <certificates src="@raw/ministry_of_digital_development_root_cert"
+                tools:ignore="NetworkSecurityConfig" />
         </trust-anchors>ne
     </base-config>
     <debug-overrides>
