--- a/app-demo/src/main/res/xml/network_security_config.xml
+++ b/app-demo/src/main/res/xml/network_security_config.xml
@@ -7,7 +7,7 @@
                 tools:ignore="NetworkSecurityConfig" />
             <certificates src="@raw/ministry_of_digital_development_root_cert"
                 tools:ignore="NetworkSecurityConfig" />
-        </trust-anchors>ne
+        </trust-anchors>
     </base-config>
     <debug-overrides>
         <trust-anchors>
