--- a/tinkoff-id/src/main/res/values/colors.xml
+++ b/tinkoff-id/src/main/res/values/colors.xml
@@ -33,6 +33,6 @@
     <color name="tinkoff_id_badge_black_style">#3D3D3D</color>
 
     <color name="tinkoff_id_action_color">#428BF9</color>
-    <color name="tinkoff_id_window_background">#FFF</color>
+    <color name="tinkoff_id_window_background">#FFFFFF</color>
 
 </resources>
